@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2020-03-01 (29)
+ - include current version in tool to redo upgrade
+
 2020-02-05 (28)
  - fix import and export of attempts to include timestart/modified while maintaining backwards compatability with previous export files
 
